--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <div class="head">
-                <div class="navdir">
+                <div class="navdir ani">
                     <div class="container">
                         <div class="content event"><a href="index.html">Events</a></div>
                         <div class="xtra">
@@ -22,7 +22,7 @@
             </div>
         </nav>
     </header>
-    <section class="showcase">
+    <section class="showcase ani">
         <!-- <img src="Screenshot 2024-01-29 210909.png" alt="" height="400vh" width="100%"> -->
     </section>
 
@@ -33,7 +33,7 @@
     </section>
     <section class="boxes">
         <a href="tech.html">
-            <div class="box tech">
+            <div class="box tech ani">
                 <div class="headings">
                     <h1>Technical Events</h1>
                 </div>
@@ -41,7 +41,7 @@
         </a>
 
         <a href="#">
-            <div class="box cult">
+            <div class="box cult ani">
                 <div class="headings">
                     <h1>Cultural Events</h1>
                 </div>
@@ -49,7 +49,7 @@
         </a>
 
         <a href="#">
-            <div class="box sport">
+            <div class="box sport ani">
                 <div class="headings">
                     <h1>Sports Events</h1>
                 </div>
