--- a/HTML/tech.html
+++ b/HTML/tech.html
@@ -11,7 +11,7 @@
 <body class="backg">
     <header>
         <nav>
-            <div class="head">
+            <div class="head ani">
                 <div class="navdir">
                     <div class="container">
                         <div class="content event"><a href="index.html">Events</a></div>
@@ -26,12 +26,12 @@
     </header>
 
     <section>
-        <div class="techeve">
+        <div class="techeve ani">
             <p>
                 Technical Events
             </p>
         </div>
-        <div class="boxes">
+        <div class="boxes ani">
             <div class="box quiz dec">
                 <h1>Technical Quiz</h1>
                 <p class="details">
